--- a/docker/nginx/conf.d/api.conf
+++ b/docker/nginx/conf.d/api.conf
@@ -1,13 +1,11 @@
 server {
     listen 80;
 
-    access_log /dev/stdout;
-    error_log /dev/stdout warn;
+    access_log off;
+    error_log off;
 
     root /var/www/html/api;
     index index.php;
-
-    gzip off;
 
     location / {
         try_files $uri /index.php?$query_string;
