--- a/docker/nginx/fastcgi-php.conf
+++ b/docker/nginx/fastcgi-php.conf
@@ -1,3 +1,6 @@
+fastcgi_buffers 8 16k;
+fastcgi_buffer_size 32k;
+
 # regex to split $uri to $fastcgi_script_name and $fastcgi_path
 fastcgi_split_path_info ^(.+?\.php)(/.*)$;
 
