--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -2,7 +2,7 @@ user user;
 worker_processes auto;
 
 events {
-        worker_connections 512;
+        worker_connections 32;
         # multi_accept on;
 }
 
@@ -16,7 +16,7 @@ http {
         keepalive_timeout 30s;
         server_tokens off;
 
-        # server_names_hash_bucket_size 64;
+        server_names_hash_bucket_size 64;
         # server_name_in_redirect off;
 
         include /etc/nginx/mime.types;
